--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -71,6 +71,10 @@ $black: #2b2523
 .margin-top-0
   margin-top: 0 !important
 
+.navbar-item[aria-current="page"]
+  color: #3273dc
+
+
 .navbar-item .icon
   color: $primary
 // Override for use of svg's from https://simpleicons.org/
