--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -145,14 +145,18 @@ $menu-label-color: $white-ter
     color: $black;
   .date
     color: $gray;
+    font-size: 0.85rem;
 
 // index
 .index-page a
   &:hover
     color: $gray !important;
 
+h2
+  color: $black;
+
 a
-  color: $gray !important;
+  color: #888 !important;
 
 @import "~bulma"
 
