remove studio page, add work year filter

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -147,6 +147,17 @@ $menu-label-color: $white-ter
     color: $gray;
     font-size: 0.85rem;
 
+// work page
+.year-picker
+  position: relative;
+  top: -32px;
+
+  .is-selected
+    color: $black !important;
+    font-weight: 600;
+  a:hover
+    color: $black !important;
+
 // index
 .index-page a
   &:hover
@@ -158,6 +169,7 @@ h2
 a
   color: #888 !important;
 
+  
 @import "~bulma"
 
 // responsiveness
