left-align didactic text

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -158,6 +158,16 @@ $menu-label-color: $white-ter
   a:hover
     color: $black !important;
 
+.didactic
+  text-align: left;
+  display: inline-block;
+
+  span
+    display: inline-block;
+    float: left;
+    clear: both;
+
+
 // index
 .index-page a
   &:hover
