--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -11,6 +11,10 @@ $body-color: #000
 $black: #000
 $gray: #aaa;
 
+html
+  background-color: #F5B287 !important;
+  letter-spacing: -0.014em;
+
 @media screen and (min-width: 1024px)
   .navbar
     margin-top: 2em;
@@ -171,13 +175,29 @@ $menu-label-color: $white-ter
 // index
 .index-page a
   &:hover
-    color: $gray !important;
+    opacity: .5 !important
+
+@media screen and (min-width: 768px)
+  .logo img
+    margin: 1.25rem 0 -6rem !important
+  
+  .social-button-group > div
+    flex-direction: row !important
+
+
+
+.animate-text
+  animation: slide-left 96s infinite linear
+
+@keyframes slide-left
+  0%
+    transform: translateX(0)
+  100%
+    transform: translateX(-400%)
+
 
 h2
   color: $black;
-
-a
-  color: #888 !important;
 
   
 @import "~bulma"
