add font, more images, fix banner

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -184,15 +184,14 @@ $menu-label-color: $white-ter
     flex-direction: row !important
 
 
-
 .animate-text
-  animation: slide-left 96s infinite linear
+  animation: slide-left 40s infinite linear
 
 @keyframes slide-left
   0%
     transform: translateX(0)
   100%
-    transform: translateX(-400%)
+    transform: translateX(-100%)
 
 
 h2
@@ -211,3 +210,8 @@ h2
   .work-page
     // max-width: 480px !important;
     margin: 0 1em !important;
+
+
+@font-face
+  font-family: 'PicNic';
+  src: url('../../static/font/PicNic-Regular.woff2') format('woff2'), url('../../static/font/PicNic-Regular.woff') format('woff');
