rename social buttons

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -180,7 +180,7 @@ $menu-label-color: $white-ter
   .logo img
     margin: 9rem 0 8rem !important
   
-  .social-button-group > div
+  .link-button-group > div
     flex-direction: row !important
 
 
