--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -207,9 +207,32 @@ h2
   .featured-thumbnail
     max-width: 400px !important;
 
-  .work-page
-    // max-width: 480px !important;
-    margin: 0 1em !important;
+  .index-page
+    font-size: 1.25rem !important;
+  
+  .section
+    padding: 2rem 0.75rem 1rem !important;
+
+  .link-button
+    margin-bottom: 1rem !important;
+    width: 320px !important;
+
+  .content h2
+    font-size: 1.5rem !important;
+    margin-bottom: -1rem;
+
+  .artworks-container
+    width: 100vw;
+    overflow: scroll;
+    padding: 2rem 0;
+
+  .artworks
+    img
+      width: 280px !important;
+      margin: 0 16px !important;
+
+      &:first-child
+        margin-left: 32px !important;
 
 
 @font-face
