more mobile fixes

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -204,6 +204,9 @@ h2
 +tablet-only
 
 +mobile
+  .logo img
+    margin-bottom: 3rem !important;
+
   .featured-thumbnail
     max-width: 400px !important;
 
@@ -219,6 +222,7 @@ h2
 
   .content h2
     font-size: 1.5rem !important;
+    margin-top: 3rem !important;
     margin-bottom: -1rem;
 
   .artworks-container
